Also added .htaccess this time

--- a/.htaccess
+++ b/.htaccess
@@ -3,3 +3,4 @@ RewriteRule ^js.*				-		[L]
 RewriteRule ^css.*				-		[L]
 RewriteRule ^fonts.*				-		[L]
 RewriteRule ^([^/\.]+)/*$			?page=$1	[L]
+RewriteRule ^([^/\.]+)/(.*)/*$          ?page=$1&options=$2       [L]
